--- a/src/ui/search_bar.ui
+++ b/src/ui/search_bar.ui
@@ -43,6 +43,7 @@
     <child>
       <object class="GtkSearchEntry" id="search_entry">
         <property name="hexpand">True</property >
+        <signal name="activate" handler="search_cb" swapped="yes" object="LlyfrSearchBar"/>
       </object>
     </child>
   </template>
