--- a/src/ui/result_view.ui
+++ b/src/ui/result_view.ui
@@ -21,6 +21,14 @@
             <property name="editable">false</property>
             <property name="monospace">true</property>
             <property name="pixels-below-lines">1</property>
+            <property name="margin-top">6</property>
+            <property name="margin-bottom">6</property>
+            <property name="left-margin">6</property>
+            <property name="top-margin">12</property>
+            <property name="bottom-margin">12</property>
+            <style>
+              <class name="solarized" />
+            </style>
           </object>
         </child>
       </object>
