--- a/src/llyfr-window.ui
+++ b/src/llyfr-window.ui
@@ -5,25 +5,17 @@
     <property name="default-width">1280</property>
     <property name="default-height">720</property>
     <child>
-      <object class="GtkScrolledWindow">
-        <property name="hscrollbar-policy">never</property>
+      <object class="AdwStatusPage">
+        <property name="title">Start Searching</property>
+        <property name="icon-name">edit-find</property>
         <child>
-          <object class="GtkListBox" id="results_list">
-            <property name="show-separators">true</property>
-            <property name="selection-mode">none</property>
+          <object class="LlyfrSearchScreen">
           </object>
         </child>
       </object>
     </child>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="header_bar">
-        <child type="title">
-          <object class="LlyfrSearchBar" id="search_bar">
-            <property name="hexpand">True</property>
-            <property name="margin-start">18</property>
-            <property name="margin-end">18</property>
-          </object>
-        </child>
         <child type="end">
           <object class="GtkMenuButton" id="menu_button">
             <property name="can-focus">False</property>
