--- a/src/llyfr-window.ui
+++ b/src/llyfr-window.ui
@@ -4,6 +4,7 @@
   <template class="LlyfrWindow" parent="GtkApplicationWindow">
     <property name="default-width">1280</property>
     <property name="default-height">720</property>
+    <property name="title">Llyfrgell</property>
     <child>
       <object class="AdwStatusPage">
         <property name="title">Start Searching</property>
