--- a/src/llyfr-search-screen.ui
+++ b/src/llyfr-search-screen.ui
@@ -31,15 +31,6 @@
                         <property name="icon-name">pan-down-symbolic</property>
                       </object>
                     </child>
-                    <child>
-                      <object class="GtkPopover" id="context_popover">
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">Test</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
                   </object>
                 </child>
               </object>
@@ -55,6 +46,32 @@
                 <property name="icon-name">media-playback-start-symbolic</property>
               </object>
             </child>
+            <child>
+             <object class="GtkPopover" id="context_popover">
+              <child>
+                <object class="GtkBox">
+                  <property name="orientation">vertical</property>
+                  <property name="spacing">12</property>
+                  <child>
+                    <object class="GtkSearchEntry">
+                      <property name="hexpand">true</property>
+                    </object>
+                  </child>
+                  <child>
+                    <object class="GtkButton" id="find_repos">
+                      <property name="label">Find Git Repos</property>
+                      <property name="action-name">app.scan-git-repos</property>
+                    </object>
+                  </child>
+                  <child>
+                    <object class="GtkSpinner" id="spinner">
+                      <property name="spinning">true</property>
+                    </object>
+                  </child>
+                </object>
+              </child>
+            </object>
+          </child>
           </object>
         </child>
       </object>
