--- a/src/llyfr-search-screen.ui
+++ b/src/llyfr-search-screen.ui
@@ -11,7 +11,7 @@
               <class name="linked"/>
             </style>
             <child>
-              <object class="GtkButton" id="context_switcher">
+              <object class="GtkButton" id="context_switch_button">
                 <signal name="clicked" handler="switch_context_cb" swapped="yes" object="LlyfrSearchScreen" />
                 <child>
                   <object class="GtkBox">
@@ -22,8 +22,8 @@
                       </object>
                     </child>
                     <child>
-                      <object class="GtkLabel">
-                        <property name="label">Test</property>
+                      <object class="GtkLabel" id="context_label">
+                        <property name="label">Select...</property>
                       </object>
                     </child>
                     <child>
@@ -48,28 +48,16 @@
             </child>
             <child>
              <object class="GtkPopover" id="context_popover">
-              <child>
-                <object class="GtkBox">
-                  <property name="orientation">vertical</property>
-                  <property name="spacing">12</property>
-                  <child>
-                    <object class="GtkSearchEntry">
-                      <property name="hexpand">true</property>
-                    </object>
-                  </child>
-                  <child>
-                    <object class="GtkButton" id="find_repos">
-                      <property name="label">Find Git Repos</property>
-                      <property name="action-name">app.scan-git-repos</property>
-                    </object>
-                  </child>
-                  <child>
-                    <object class="GtkSpinner" id="spinner">
-                      <property name="spinning">true</property>
-                    </object>
-                  </child>
-                </object>
-              </child>
+               <property name="width-request">600</property>
+               <property name="height-request">400</property>
+               <child>
+                 <object class="LlyfrSearchContextSwitcher" id="context_switcher">
+                   <signal name="select"
+                           handler="select_cb"
+                           swapped="yes"
+                           object="LlyfrSearchScreen" />
+                 </object>
+               </child>
             </object>
           </child>
           </object>
