--- a/src/llyfr-window.ui
+++ b/src/llyfr-window.ui
@@ -6,25 +6,8 @@
     <property name="default-height">720</property>
     <property name="title">Llyfrgell</property>
     <child>
-      <object class="GtkBox">
-        <property name="orientation">vertical</property>
-        <property name="spacing">12</property>
-        <child>
-          <object class="GtkSearchBar">
-            <property name="search-mode-enabled">true</property>
-            <child>
-              <object class="LlyfrSearchBar" id="search_bar">
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwStatusPage">
-            <property name="title">Start Searching</property>
-            <property name="icon-name">edit-find</property>
-            <property name="vexpand">true</property>
-          </object>
-        </child>
+      <object class="LlyfrSearchPage" id="search_page">
+
       </object>
     </child>
     <child type="titlebar">
@@ -34,9 +17,6 @@
             <property name="can-focus">False</property>
             <property name="receives-default">False</property>
             <property name="direction">none</property>
-            <child>
-              <placeholder/>
-            </child>
           </object>
         </child>
       </object>
